--- a/pharmacy/src/styles/style.css
+++ b/pharmacy/src/styles/style.css
@@ -1102,7 +1102,7 @@ a {
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(81, 234, 234, 0.9);
+    background: rgba(255, 255, 255, 0.8);
     z-index: 1; }
   .bg-image > .container {
     position: relative;
@@ -1123,3 +1123,71 @@ a {
 
 .custom-table td {
   color: #000; }
+
+  .confirmation-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .modal-content {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    max-width: 400px; /* Set the maximum width as needed */
+    margin: 0 auto; /* Center the modal horizontally */
+  }
+  
+  .modal-buttons {
+    padding: 10px 20px;
+    margin: 4px 10px;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: #87CEEB; /* Light Blue background color */
+    color: white; /* White text color */
+    border: none;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+  }
+  
+  .modal-buttons:hover {
+    background-color: #5F9EA0; /* Darker blue on hover */
+  }
+  /* Add these styles to your style.css */
+
+.modal-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
+  z-index: 1000;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.3s;
+}
+
+.modal-wrapper.show {
+  visibility: visible;
+  opacity: 1;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
