--- a/pharmacy/src/css/style.css
+++ b/pharmacy/src/css/style.css
@@ -763,7 +763,7 @@ a:focus {
 }
 
 .footer_section {
-  background:  #1fab89;
+  background: rgb(90, 90, 227);
   color: #ffffff;
   padding: 60px 0 15px 0;
   position: relative;
